# elektrotakip

./: .env.example  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1ddbfe23e7c1_create_users_table.py  6e62d64d089f_add_category_and_product_models.py
app/: config.py  database.py  dependencies.py  main.py  schemas.py  security.py
app/models/: catalog.py  user.py
app/routers/: auth.py
app/templates/: base.html  home.html  login.html  register.html
